# Schemy

./: .gitignore  CODE_SIGNING_POLICY.md  LICENSE  PRIVACY.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
electron/: main.ts  preload.cts
src/: colors.test.ts  colors.ts  geometry.test.ts  geometry.ts  global.d.ts  legacy.ts  main.ts  nbt.test.ts  nbt.ts  style.css
tools/: diagnose-windows-preview.ps1
windows-shell/: CMakeLists.txt  SchemyPreviewBroker.cpp  SchemyShell.cpp  SchemyShell.def
